--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "@codemirror/commands": "^6.1.2",
-    "@codemirror/lang-javascript": "^6.1.1",
-    "@codemirror/search": "^6.2.3",
-    "@codemirror/theme-one-dark": "^6.1.0",
-    "@codemirror/view": "^6.6.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "minify": "^9.1.0",
-    "rollup": "^3.5.1"
+    "@codemirror/commands": "6.5.0",
+    "@codemirror/lang-sql": "6.6.4",
+    "@codemirror/search": "6.5.6",
+    "@codemirror/view": "6.26.3",
+    "@codemirror/theme-one-dark": "6.1.2",
+    "@rollup/plugin-node-resolve": "15.2.3",
+    "minify": "11.2.0",
+    "rollup": "4.18.0"
   }
 }
