--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "bundle": "rollup src/editor.js -f iife -o dist/cm6.bundle.js -p @rollup/plugin-node-resolve --output.name cm6",
     "bundle-minify": "run-s bundle minify",
     "bundle-minify-copy": "run-s bundle minify copy",
-    "minify": "minify dist/cm6.bundle.js > dist/cm6.bundle.min.js",
+    "minify": "terser dist/cm6.bundle.js --compress --mangle --output dist/cm6.bundle.min.js",
     "watch-bundle-minify": "npm-watch bundle-minify",
     "watch-bundle-minify-copy": "npm-watch bundle-minify-copy",
-    "copy": "xcopy .\\dist\\*.js  \"PathHere\" /y"
+    "copy": "xcopy .\\dist\\*.js  \"pathere\" /y"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +30,7 @@
     "minify": "11.2.0",
     "npm-run-all2": "6.2.0",
     "npm-watch": "0.13.0",
-    "rollup": "4.18.0"
+    "rollup": "4.18.0",
+    "terser": "5.31.0"
   }
 }
